test/corpus/see_tag_member.txt
===
see tag: member + label
===

/**
 * @see #member label
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))
    (description)))

===
see tag: markdown member + label
===

/// @see #member label

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))
    (description)))

===
see tag: member
===

/**
 * @see #member
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))))

===
see tag: markdown member
===

/// @see #member

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))))

===
see tag: member + label: without hash
===

/**
 * @see member label
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))
    (description)))

===
see tag: markdown member + label: without hash
===

/// @see member label

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))
    (description)))

===
see tag: member: without hash
===

/**
 * @see member
 */

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))))

===
see tag: markdown member: without hash
===

/// @see member

---

(document
  (see_tag
    (tag_name)
    (reference
      (member
        (identifier)))))
