test/corpus/serial_field_tag.txt
===
serialField tag
===

/**
 * @serialField fieldName MyType My description
 */

---

(document
  (serial_field_tag
    (tag_name)
    (identifier)
    (type
      (identifier))
    (description)))

===
serialField tag: markdown
===

/// @serialField fieldName MyType My description

---

(document
  (serial_field_tag
    (tag_name)
    (identifier)
    (type
      (identifier))
    (description)))

===
serialField tag: missing description
===

/**
 * @serialField fieldName MyType
 */

---

(document
  (serial_field_tag
    (tag_name)
    (identifier)
    (type
      (identifier))))

===
serialField tag: markdown missing description
===

/// @serialField fieldName MyType

---

(document
  (serial_field_tag
    (tag_name)
    (identifier)
    (type
      (identifier))))
