test/corpus/spec_tag.txt
===
spec tag
===

/**
 * @spec https://example.com Example Spec
 */

---

(document
  (spec_tag
    (tag_name)
    (url)
    (description)))

===
spec tag: markdown
===

/// @spec https://example.com Example Spec

---

(document
  (spec_tag
    (tag_name)
    (url)
    (description)))

===
spec tag: missing title
===

/**
 * @spec https://example.com
 */

---

(document
  (spec_tag
    (tag_name)
    (url)))

===
spec tag: markdown missing title
===

/// @spec https://example.com

---

(document
  (spec_tag
    (tag_name)
    (url)))
