test/corpus/summary_tag.txt
===
summary tag
===

/**
 * {@summary some text}
 */

---

(document
  (description
    (summary_tag
      (tag_name)
      (description))))

===
summary tag: markdown
===

/// {@summary some text}

---

(document
  (markdown_description
    (summary_tag
      (tag_name)
      (description))))

===
summary tag: missing summary
===

/**
 * {@summary}
 */

---

(document
  (description
    (summary_tag
      (tag_name))))

===
summary tag: markdown missing summary
===

/// {@summary}

---

(document
  (markdown_description
    (summary_tag
      (tag_name))))
