test/corpus/system_property_tag.txt
===
systemProperty tag
===

/**
 * {@systemProperty somePrefix.property}
 */

---

(document
  (description
    (system_property_tag
      (tag_name)
      (system_property
        (identifier)
        (identifier)))))

===
systemProperty tag: markdown
===

/// {@systemProperty somePrefix.property}

---

(document
  (markdown_description
    (system_property_tag
      (tag_name)
      (system_property
        (identifier)
        (identifier)))))

===
systemProperty tag: missing system property
===

/**
 * {@systemProperty}
 */

---

(document
  (description
    (system_property_tag
      (tag_name))))

===
systemProperty tag: markdown missing system property
===

/// {@systemProperty}

---

(document
  (markdown_description
    (system_property_tag
      (tag_name))))
