test/corpus/throws_tag.txt
===
throws tag
===

/**
 * @throws Type test
 */

---

(document
  (throws_tag
    (tag_name)
    (type
      (identifier))
    (description)))

===
throws tag: markdown
===

/// @throws Type test

---

(document
  (throws_tag
    (tag_name)
    (type
      (identifier))
    (description)))

===
throws tag: qualified type
===

/**
 * @throws foo.Type test
 */

---

(document
  (throws_tag
    (tag_name)
    (type
      (identifier)
      (identifier))
    (description)))

===
throws tag: markdown qualified type
===

/// @throws foo.Type test

---

(document
  (throws_tag
    (tag_name)
    (type
      (identifier)
      (identifier))
    (description)))

===
throws tag: missing description
===

/**
 * @throws Type
 */

---

(document
  (throws_tag
    (tag_name)
    (type
      (identifier))))

===
throws tag: markdown missing description
===

/// @throws Type

---

(document
  (throws_tag
    (tag_name)
    (type
      (identifier))))
