test/corpus/uses_tag.txt
===
uses tag
===

/**
 * @uses Service test
 */

---

(document
  (uses_tag
    (tag_name)
    (type
      (identifier))
    (description)))

===
uses tag: markdown
===

/// @uses Service test

---

(document
  (uses_tag
    (tag_name)
    (type
      (identifier))
    (description)))

===
uses tag: missing description
===

/**
 * @uses Service
 */

---

(document
  (uses_tag
    (tag_name)
    (type
      (identifier))))

===
uses tag: markdown missing description
===

/// @uses Service

---

(document
  (uses_tag
    (tag_name)
    (type
      (identifier))))
